--- a/templates/login.html
+++ b/templates/login.html
@@ -30,11 +30,11 @@
                         <label>Password</label>
                         </div>
                         <div class="forgot">
-                            <a href="#">Forgot Password?</a>
+                            <a href="/forgotpassword">Forgot Password?</a>
                         </div>
                         <button type="submit" class="btn">Login</button>
                         <div class="log-register">
-                            <p>Don't have an account ?<a href="#" class="register-link"> Register</a></p>
+                            <p>Don't have an account ?<a href="/register" class="register-link"> Register</a></p>
                         </div>
     
 
