--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
                     <p>Take our career guidance tour to get a list of career recommendations that match your skills, interests, and values.</p>
                   
                 <div class="btn">
-                    <button>Get Started</button>
+                    <button onclick="window.location.href='/get_started';">Get Started</button>
                 </div>
             </div>
 
