--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -12,7 +12,7 @@ body {
   padding: 20px;
   margin: 10% auto;
   width: 450px;
-  height: 350px;
+  height: 200px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
 }
@@ -29,16 +29,8 @@ label {
   margin-bottom: 10px;
 }
 
-input[type=email] {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-}
-input[type=text] {
+
+input[type=password] {
 
   width: 100%;
   padding: 10px;
@@ -67,24 +59,18 @@ input[type=submit]:hover {
 
     </style>
     <meta charset="utf-8">
-    <title>Forgot Password</title>
+    <title>Change Password</title>
   </head>
   <body>
     <div class="container">
-    <form action="/forgot_password" method="post">
-      <h1>Forgot Password</h1>
-      <label for="email">Email:</label>
-      <input type="email" value="{{email}}" name="email" placeholder="Enter your email">
-      <input type="submit" value="Send">
+    <form action="/set_password" method="post">
+      <h1>Change Password</h1>
+      <label for="email">Change Password:</label>
+      <input type="password" value="{{password}}" name="password" placeholder="Enter your password">
+      <input type="submit" value="Change Password">
       <div class="message-box">
        
     </div>
-    </form>
-    <form action="/verify_otp" method="post">
-      <b>  <p for="email" style="margin-top: 40px;">Enter your otp:</p></b>
-        <input type="text" value="{{otp}}" name="otp" placeholder="Enter your otp">
-        
-        <input type="submit" value="Submit">
         <div class="message-box">
           {% with messages = get_flashed_messages() %}
           {% if messages %}
