--- a/templates/login.html
+++ b/templates/login.html
@@ -18,19 +18,32 @@
            <a href="/"> <span class="logo-close"><ion-icon name="close"></ion-icon></span></a>
            <div class="form-box login">
             <h2>login</h2>
-            <form action="">
+            <form action="/login_validate" method="post">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
+                    <input type="email" value="{{email}}" name="email" required>
                     <label>Email</label>
                     </div>
                     <div class="input-box">
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" required>
+                        <input type="password" name="password" required>
                         <label>Password</label>
                         </div>
                         <div class="forgot">
                             <a href="/forgotpassword">Forgot Password?</a>
+                        </div>
+                        <div class="message-box">
+                            {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+
+
+                            {% for message in messages %}
+                            <label class="error">{{ message }}</label>
+                            {% endfor %}
+
+
+                            {% endif %}
+                            {% endwith %}
                         </div>
                         <button type="submit" class="btn">Login</button>
                         <div class="log-register">
