--- a/templates/register.html
+++ b/templates/register.html
@@ -49,7 +49,9 @@
                             <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                             <input type="password" name="confirm_password"
                                 value="{{confirm_password}}" required>
-</div>
+                            <label>Confirm Password</label>
+
+                        </div>
 
 
                             <div class="message-box">
