--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background: url(../images/home_page.png);
+    /* background: url(../images/home_page.png); */
+    background: #800000;
     overflow: hidden;
 }
 
