--- a/static/css/register.css
+++ b/static/css/register.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background: url(../images/home_page.png);
+    /* background: url(../images/home_page.png); */
+    background-color: #800000;
 
 }
 
@@ -118,21 +119,7 @@ cursor: pointer;
     color: white;
     line-height: 57px;
 }
-.forgot{
-    font-size: .9m;
-    color: white;
-    font-weight: 500px;
-    margin: -15px 0 15px;
-    display: flex;
-    justify-content:right;
-}
-.forgot a{
-    color: white;
-    text-decoration: none;
-}
-.forgot a:hover{
-    text-decoration: underline;
-}
+
 .btn{
     width: 100%;
     height: 45px;
