--- a/static/css/activity.css
+++ b/static/css/activity.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&family=Oxygen:wght@300&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap");
 
 * {
     margin: 0;
@@ -11,12 +11,13 @@
 
 body {
     background: #ebf5fc;
-    padding-top: 100px;
+    padding-top:50px;
+    overflow: hidden;
 }
 
-
 nav{
-    background-color:  #46c2cb;
+    background:  #46c2cb;
+
     align-items: center;
     position: fixed;
     display: flex;
@@ -47,7 +48,9 @@ img{
 
     list-style: none;
 }
-
+.navItems a.active{
+  color:#7f00ff;
+}
 .navItems a{
    
     font-size: 1.1rem;
@@ -61,9 +64,7 @@ img{
     transition: all 0.50s ease;
 }
 
-.navItems a.active{
-    color: #7f00ff;
-}
+
 
 .navItems  a:hover{
     color: #7f00ff;
@@ -107,6 +108,9 @@ img{
 }
 
 @media (max-width:1280px){
+    body{
+        overflow: scroll;
+    }
     nav{
 padding: 14px 2%;
 transition: .2s;
@@ -117,6 +121,9 @@ margin:0px 20px;
     }
 }
 @media (max-width:1090px){
+    body{
+        overflow: scroll;
+    }
     #menu-icon{
         display: block;
     }
@@ -153,40 +160,109 @@ margin:0px 20px;
         right: 2%;
     }
     .navItems a.active{
-        color:#7f00ff;
-    }
+      color:#7f00ff;
+  }
 }
-.container {
-    width: 100%;
-    min-height: 100vh;
-    justify-content: center;
+.main_container{
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+background: #ebf5fc;
+}
+.container{
     display: flex;
+justify-content: center;
+align-items: center;
+max-width: 1200px;
+flex-wrap: wrap;
+padding: 40px 0;
 }
-.wrapper {
-    padding: 20px;
-    margin-top: 2.5%;
+.container .card{
     position: relative;
+    width: 320px;
+    height:460px;
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
+                inset -5px -5px 5px rgba(255,255,255,0.5),
+                5px 5px 5px rgba(255,255,255,0.5),
+                -5px -5px 5px rgba(255,255,255,0.5);
+border-radius: 15px;
+margin: 30px;
+}
+.container .card .box{
+    position: absolute;
+    top:20px;
+    left:20px;
+    right:20px;
+    bottom: 20px;
+    background: #ebf5fc;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
     display: flex;
-    width: 800px;
-    height: 100%;
-    background: transparent;
- 
     justify-content: center;
-    align-items: center;
-}
-p{
-   
-    color: black;
-   font-size: 18px;
-line-height: 1.5;
-
-
-}
-span{
-    font-family: 'Karla', sans-serif ;
-  color: black;
-  margin-bottom: 28px;
-  font-size: 27px;
-  font-weight: 900px;
+    align-items: center; 
+    transition: 0.5s;
 }
 
+.container .card:hover .box {
+    transform: translateY(-50px);
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(45deg,#b95ce4,#4f29cd);
+}
+
+.container .card .box .content{
+    padding: 20px;
+    text-align: center;
+}
+.container .card .box .content img{
+    position: absolute;
+    top:-1px;
+    left:33%;
+    /* right: 10px; */
+    height: 6em;
+    width: 6em;
+  
+}
+.container .card .box .content h3{
+    margin-top: 20px;
+
+    font-size: 1.8em;
+    color:#777;
+    z-index: 1;
+    transition: 0.5s;
+}
+.container .card:hover .box .content h3{
+color: #fff;
+}
+.container .card .box .content p{
+    font-family: 'Edu NSW ACT Foundation', cursive;
+    font-size: 1.5em;
+    font-weight: 300;
+    color: #777;
+    z-index: 1;
+    transition: 0.5s;
+}
+.container .card:hover .box .content p{
+    color: #fff;
+    }
+.container .card .box .content a{
+    position: absolute;
+    left: 30%;
+    font-size: 30px;
+    width: 100px;
+    height: 40px;
+ 
+    bottom: 10%;
+    display: inline-block;
+  
+    background: #03a9fa;
+    margin-top: 15px;
+    border-radius: 10px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 400;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.container .card:hover .box .content a{
+    background: #ff568f;
+}
