--- a/static/css/cources.css
+++ b/static/css/cources.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&family=Oxygen:wght@300&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -10,13 +9,15 @@
 }
 
 body {
+
     background: #ebf5fc;
-    padding-top: 100px;
+    padding-top:150px;
 }
 
-
 nav{
-    background-color:  #46c2cb;
+    /* background:  #33383D; */
+    background:  #46c2cb;
+
     align-items: center;
     position: fixed;
     display: flex;
@@ -47,7 +48,9 @@ img{
 
     list-style: none;
 }
-
+.navItems a.active{
+  color:#7f00ff;
+}
 .navItems a{
    
     font-size: 1.1rem;
@@ -61,9 +64,7 @@ img{
     transition: all 0.50s ease;
 }
 
-.navItems a.active{
-    color: #7f00ff;
-}
+
 
 .navItems  a:hover{
     color: #7f00ff;
@@ -153,8 +154,8 @@ margin:0px 20px;
         right: 2%;
     }
     .navItems a.active{
-        color:#7f00ff;
-    }
+      color:#7f00ff;
+  }
 }
 .container {
     width: 100%;
@@ -162,31 +163,119 @@ margin:0px 20px;
     justify-content: center;
     display: flex;
 }
-.wrapper {
-    padding: 20px;
-    margin-top: 2.5%;
-    position: relative;
+
+  .search-container {
+    width: 100%;
+    /* background-color: #f2f2f2; */
+    padding: 10px;
     display: flex;
-    width: 800px;
-    height: 100%;
-    background: transparent;
- 
     justify-content: center;
     align-items: center;
-}
-p{
-   
-    color: black;
-   font-size: 18px;
-line-height: 1.5;
+  }
+  
+  .search-box {
+    width: 100%;
+    max-width: 900px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .search-box input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  .search-box button {
+    background-color:  #03a9fa;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 20px;
+  }
+  
+  .search-box button:hover {
+    background-color: #3e8e41;
+  }
+  
+  .search-results-container {
+    margin-top: 20px;
+    overflow-y: auto;
+    max-height: calc(100vh - 160px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .search-result {
+    /* background-color: white; */
+    margin-top: 20px;
+    color: #2b3467;
 
-
-}
-span{
-    font-family: 'Karla', sans-serif ;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    /* background-color: #fff; */
+  }
+  
+  .text{
+    background-color: white;
+    margin: 40px 18% 2% 18%;
   color: black;
-  margin-bottom: 28px;
-  font-size: 27px;
-  font-weight: 900px;
-}
+  padding: 10px;
 
+  
+
+  font-family: Open Sans,sans-serif;
+  font-size: 18px;
+  letter-spacing: .07em;
+
+    background-color: white;
+
+  line-height: 1.5;
+
+} 
+ h4{
+  font-family: 'Karla', sans-serif;
+  color: black;
+  margin-bottom: 22px;
+  font-size: 24px;
+  font-weight: 200px;
+
+} 
+pre {
+  margin: 10px;
+  white-space: pre-wrap; 
+  overflow-wrap: break-word;
+  overflow-x: auto;
+  max-width: 100%; 
+  
+  padding: 10px; 
+}
+  .search-result:hover {
+    background-color: white;
+   
+  }
+  
+  @media screen and (max-width: 600px) {
+    .search-box {
+      max-width: 400px;
+    }
+    .search-results-container {
+      max-height: calc(100vh - 220px);
+    }
+    .text{
+    margin: 40px 2% 2% 2%;
+
+    }
+  }
+  
