--- a/static/css/interest.css
+++ b/static/css/interest.css
@@ -1,21 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
 }
-body{
-    overflow: hidden; 
-    background: linear-gradient(45deg,#7f00ff, #e26b9c);
+
+body {
+    background: #ebf5fc;
+    padding-top: 150px;
 }
-.container{
-    width: 100%;
-    min-height: 130vh;
-    max-height: 130vh;
-    
-}
+
+
 nav{
+    background-color:  #46c2cb;
     align-items: center;
     position: fixed;
     display: flex;
@@ -29,8 +28,8 @@ nav{
 }
 img{
     z-index: 50;
-    height: 45px;
-    width: 130px;
+    height: 42px;
+    width: 135px;
 }
 .logo{
     float: left;
@@ -46,10 +45,7 @@ img{
 
     list-style: none;
 }
-.navItems a.active{
 
-    color:yellow;
-}
 .navItems a{
    
     font-size: 1.1rem;
@@ -63,10 +59,12 @@ img{
     transition: all 0.50s ease;
 }
 
-
+.navItems a.active{
+    color: #7f00ff;
+}
 
 .navItems  a:hover{
-    color: yellow;
+    color: #7f00ff;
 
 }
 
@@ -85,17 +83,18 @@ img{
     text-decoration: none;
     transition: all 0.50s ease;
 }
+
 .user{
     display: flex;
     align-items: center;
 }
 .user i{
-    color:yellow;
+    color:#7f00ff;
     font-size: 28px;
     margin-right: 7px;
 }
 .main a:hover{
-    color:yellow;
+    color:#7f00ff;
 }
 #menu-icon{
     font-size: 35px;
@@ -155,122 +154,39 @@ margin:0px 20px;
         color:#7f00ff;
     }
 }
-
-.wrapper{
-display: flex;
-width: 100%;
-height: 100vh;
-justify-content: center;
-align-items: center;
-padding: 0 10%;
-overflow: hidden;
-}
-.wrapper::before{
+form {
+    width: 800px;
+    margin: auto;
+  }
+  .button{
+    font-weight: 900;
     position: absolute;
-    content: '';
-    height: 600px;
-    width: 600px;
-    border-radius: 50%;
-    left: -15%;
-    top:40%;
-   
-    background: linear-gradient(75deg,red,orange);
-
-    animation: object1 6s linear infinite;
-}
-.wrapper::after{
-    position: absolute;
-    content: '';
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    left: 35%;
-    top:12%;
-
-    background: linear-gradient(75deg,red,orange);
-  
-    
-
-    animation: object2 6s linear infinite;
-}
-@keyframes object1{
-    50%{
-        left:-13%;
-        top:41%;
-    }
-}
-@keyframes object2{
-    50%{
-        left:35%;
-        top:10%;
-    }
-}
-.topline{
-    display: block;
-    position: relative;
-    font-size: 35px;
-    letter-spacing: 5px;
+    position: fixed;
+    bottom: 3%;
+    right: 2%;
+    padding: 10px;
+    background-color: #03a9fa;
     color: white;
-}
-.topline::after{
-    position: absolute;
-    content: '';
-    height: 4px;
-    width: 45px;
-    bottom: 10px;
-    background-color: yellow;
-}
-.cols{
-    width: 60%;
-}
-.cols0{
-    z-index: 5;
-}
-h1{
-    font-size: 35px;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-    display: block;
-    font-weight:600 ;
-    color: yellow;
-}
-.multitext{
-    color: #7f00ff;
-    text-transform: capitalize;
-}
-p{
-    display: block;
-    letter-spacing: 1px;
-    width: 90%;
-    margin: 5px;
-    font-size: 1em;
-    
-    color: white;
-
-}
-.btn{
-    width:100%;
-    position: relative;
-    text-align: center;
-}
-.btn button{
-    outline: none;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
-    font-size: 25px;
-    font-weight: 400;
-    color: #3d535f;
-    background-color:white;
-    padding: 8px 14px ;
-    margin-top: 40px;
-    letter-spacing: 2px;
-    text-transform: capitalize;
-    box-shadow:0 15px 10px rgba(0, 0, 0, 0.4);
-    border-radius:2px;
+    font-size: 20px;
+    width: 80px;
+    height: 45px;
 }
-button:hover{
-    background-color: yellow;
-    /* color:  #3d535f; */
-    color: #7f00ff;
-    border: none;
+.button:hover{
+   background-color: #ff568f;
 }
+label{
+line-height: 1.5;
+font-size: 20px;
+}
+  @media only screen and (max-width: 768px) {
+    body{
+        padding-top: 100px;
+    }
+    form {
+      width: 90%;
+      margin: auto;
+    }
+  }
