--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -98,6 +98,7 @@ input[type=submit]:hover {
           {% endwith %}
       </div>
       </form>
+      <a href="/login" > back to login page</a>
     </div>
   </body>
 </html>
