--- a/templates/register.html
+++ b/templates/register.html
@@ -12,16 +12,12 @@
     <body>
         <div class="container">
 
-            <nav>
-                <div class="logo"><img
-                        src="{{url_for('static',filename='images/logo.png')}}"
-                        alt=""></div>
-            </nav>
+           
             <div class="wrapper">
                 <a href="/"> <span class="logo-close"><ion-icon name="close"></ion-icon></span></a>
                 <div class="form-box login">
                     <h2>Sign up</h2>
-                    <form action="/register_validate" method="post">
+                    <form action="/register_validate" method="post" id="registration-form">
                         <div class="input-box">
                             <span class="icon"><ion-icon name="person"></ion-icon></span>
                             <input type="text" name="name" value="{{name}}"
@@ -67,7 +63,8 @@
                                 {% endif %}
                                 {% endwith %}
                             </div>
-                            <button type="submit" class="btn">Signup</button>
+
+                            <button type="submit"class="btn">Signup</button>
                             <div class="log-register">
                                 <p>Already have an account ?<a href="/login"
                                         class="register-link"> Login</a></p>
@@ -80,7 +77,7 @@
 
             </div>
         </div>
-
+       
         <script type="module"
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule
